# inkvizitor

./: .gitignore  Debtor.hs  Geocode.hs  LocFile.hs  Main.hs  README  inkvizitor.cabal
Inkvizitor/: Debtor.hs  Geocode.hs  LocFile.hs
Inkvizitor/UI/: Debtor.hs  File.hs  Gui.hs  Main.hs  MenuBar.hs  StatusBar.hs  Tree.hs
